k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailoring-app
  labels:
    app: tailoring-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tailoring-app
  template:
    metadata:
      labels:
        app: tailoring-app
    spec:
      containers:
        - name: tailoring-app
          image: tailoring-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
