k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tailoring-app-service
  namespace: tailoring
spec:
  type: ClusterIP
  selector:
    app: tailoring-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
