k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailoring-app-ingress
  namespace: tailoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: 13.61.18.132.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tailoring-app-service
            port:
              number: 80
